CHATS_SIT/force-app/main/default/objects/T_INDIV_OTHER_INCOME__c.object
<CustomObject>
    <description>Other income information</description>
     <!--<enableChangeDataCapture>false</enableChangeDataCapture>-->
    <fields>
        <fullName>AMT_INCOME_OTHER_GROSS__c</fullName>
        <description>Gross Amount</description>
        <label>Gross Amount</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CDE_FREQ_INCOME__c</fullName>
        <description>How often is the income received?</description>
        <label>How often is the income received?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00341</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_SOURCE_INCOME__c</fullName>
        <description>Income Source</description>
        <label>Income Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00849</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_SOURCE_VRFYD_INCOME__c</fullName>
        <label>Income How Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00697</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CDE_TYPE_VERIF__c</fullName>
        <description>Verified</description>
        <label>Income Verified</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00367</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>DTE_BEGIN_EFFV__c</fullName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DTE_END_EFFV__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IDN_CLIENT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Client ID</description>
        <label>Client ID</label>
        <referenceTo>T_SBSD_INDIV__c</referenceTo>
        <relationshipLabel>Other Income</relationshipLabel>
        <relationshipName>T_SBSD_INDIV10</relationshipName>
        <type>Lookup</type>
    </fields> 
    <fields>
        <fullName>IDN_EXTNL__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CNT_HOURS_WEEK__c</fullName>
        <label>Hours per Week</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Other Income</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
   <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Other Income ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Other Income</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>EffectiveEndDateCannotBeGreaterBeginDate</fullName>
        <active>true</active>
        <errorConditionFormula>DTE_END_EFFV__c  &lt;  DTE_BEGIN_EFFV__c</errorConditionFormula>
        <errorDisplayField>DTE_END_EFFV__c</errorDisplayField>
        <errorMessage>Effective End Date cannot be Prior to Effective Begin Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_VERIF_SRC_INC_IF_VERIFTYPE_Writn</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( IDN_CLIENT__r.Is_Peak_Data__c ),NOT( IDN_CLIENT__r.Is_CBMS_Data__c ),ISPICKVAL(CDE_TYPE_VERIF__c, &quot;V&quot;) , 
    ISBLANK( TEXT(CDE_SOURCE_VRFYD_INCOME__c) ) )</errorConditionFormula>
        <errorDisplayField>CDE_SOURCE_VRFYD_INCOME__c</errorDisplayField>
        <errorMessage>Income How Verified Field is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_if_CDE_FREQ_INCOME</fullName>
        <active>true</active>
        <description>Hours per Week is Required if CDE_FREQ_INCOME = &apos;HLY&apos; and Cannot be less than 0</description>
        <errorConditionFormula>AND(NOT( IDN_CLIENT__r.Is_Peak_Data__c ),NOT( IDN_CLIENT__r.Is_CBMS_Data__c ), OR( 
	AND(ISPICKVAL( CDE_FREQ_INCOME__c , &quot;HLY&quot;), ISNULL(CNT_HOURS_WEEK__c)),
	CNT_HOURS_WEEK__c  &lt; 0
))</errorConditionFormula>
        <errorDisplayField>CNT_HOURS_WEEK__c</errorDisplayField>
        <errorMessage>Required if income received is &apos;Hourly&apos; and value cannot be less than 0.</errorMessage>
    </validationRules>
    <validationRules>
    	<fullName>BeginDateWithin31DaysFuture</fullName>
   	 <active>true</active>
    	<description>Begin Date cannot be more than 31 days in the future</description>
    	<errorConditionFormula>DTE_BEGIN_EFFV__c &gt;  TODAY() +31</errorConditionFormula>
    	<errorDisplayField>DTE_BEGIN_EFFV__c</errorDisplayField>
    	<errorMessage>Begin Date cannot be more than 31 days in the future</errorMessage>
     </validationRules>	
</CustomObject>