CHATS_SIT/force-app/main/default/objects/T_INDIV_OTHER_INCOME__c/validationRules/Require_VERIF_SRC_INC_IF_VERIFTYPE_Writn.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_VERIF_SRC_INC_IF_VERIFTYPE_Writn</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( IDN_CLIENT__r.Is_Peak_Data__c ),NOT( IDN_CLIENT__r.Is_CBMS_Data__c ),ISPICKVAL(CDE_TYPE_VERIF__c, &quot;V&quot;) , 
    ISBLANK( TEXT(CDE_SOURCE_VRFYD_INCOME__c) ) )</errorConditionFormula>
    <errorDisplayField>CDE_SOURCE_VRFYD_INCOME__c</errorDisplayField>
    <errorMessage>Income How Verified Field is Required</errorMessage>
</ValidationRule>